Ajout de la config des chemins, de la session spark et de l'ingestion